Fixing courses text on mobile

--- a/src/styles/courses.module.scss
+++ b/src/styles/courses.module.scss
@@ -379,10 +379,11 @@
 	position: relative;
 	max-width: 430px;
 	left: 10px;
-	margin: 3rem auto 3rem auto;
-	font-size: 1.2rem;
+	margin: 2rem auto;
+	font-size: 1rem;
 	font-weight: 300;
 	padding: 0;
+	max-width: 90%;
 }
 .mobSectCourses ul{
 	margin: auto;
